<resources>
    <string name="app_name" translatable="false">ActivityPedro</string>
    <string name="tv_welcome" translatable="false">Welcome!</string>
    <string name="ed_name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Bienvenido">Welcome!!!</string>
    <string name="continuar">Continue</string>
    <string name="adult">Are you an adult?</string>
    <string name="tv_edad_hola">Hello $name</string>
    <string name="deportes">Sports</string>
    <string name="noticias">News</string>
    <string name="tecnologia">Technology</string>
</resources>